--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
-const pageTitle = 'Home Page';
+import "./styles/global.css";
+
+const pageTitle = "Home Page";
 ---
 
 <html lang="en">
@@ -11,9 +13,9 @@ const pageTitle = 'Home Page';
     <title>{pageTitle}</title>
   </head>
   <body>
-	<a href="/">Home</a>
+    <a href="/">Home</a>
     <a href="/about/">About</a>
-	<a href="/blog/">Blog</a>
+    <a href="/blog/">Blog</a>
 
     <h1>{pageTitle}</h1>
   </body>
