--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,24 +1,10 @@
 ---
-import "./styles/global.css";
+import BaseLayout from "../layouts/BaseLayout.astro";
 
 const pageTitle = "My Astro Learning Blog";
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{pageTitle}</title>
-  </head>
-  <body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
-
-    <h1>My Astro Site</h1>
-    <h2>{pageTitle}</h2>
+<BaseLayout pageTitle={pageTitle}>
 
     <p>This is where I will post aobut my journey learning Astro.</p>
 
@@ -27,5 +13,4 @@ const pageTitle = "My Astro Learning Blog";
       <li><a href="/posts/post-2">Post 2</a></li>
       <li><a href="/posts/post-3">Post 3</a></li>
     </ul>
-  </body>
-</html>
+</BaseLayout>
